--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "gridsome": "^0.5.0"
   },
   "devDependencies": {
+    "@gridsome/remark-prismjs": "0.0.5",
+    "@gridsome/source-filesystem": "^0.3.0",
+    "@gridsome/transformer-remark": "^0.2.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
