--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-vue": "^5.2.2",
     "gridsome-plugin-pug": "0.0.3",
     "node-sass": "^4.11.0",
