--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "gridsome": "^0.5.0"
   },
   "devDependencies": {
+    "@gridsome/remark-prismjs": "0.0.5",
+    "@gridsome/source-filesystem": "^0.3.0",
+    "@gridsome/transformer-remark": "^0.2.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-vue": "^5.2.2",
     "gridsome-plugin-pug": "0.0.3",
     "node-sass": "^4.11.0",
