--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint --ext .js,.vue src "
   },
   "dependencies": {
-    "gridsome": "^0.5.0"
+    "gridsome": "^0.5.0",
+    "vue-svg-loader": "^0.12.0"
   },
   "devDependencies": {
     "@gridsome/remark-prismjs": "0.0.5",
