--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "gulp buildProd",
-    "build:dev": "gulp buildDev"
+    "build:dev": "gulp buildDev",
+    "serve": "gulp serve"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
     "del": "^4.1.1",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
