--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.8.3",
     "@babel/core": "^7.4.5",
+    "browser-sync": "^2.26.5",
     "del": "^4.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
