--- a/package.json
+++ b/package.json
@@ -1,29 +1,39 @@
 {
   "name": "johannesthiel.me",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "build": "gridsome build",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore",
-    "lint": "eslint --ext .js,.vue src "
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eleventy": "eleventy",
+    "build": "gulp buildProd",
+    "build:dev": "gulp buildDev",
+    "serve": "gulp serve"
   },
-  "dependencies": {
-    "gridsome": "^0.5.0",
-    "vue-svg-loader": "^0.12.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ToxicJojo/johannesthiel.me.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ToxicJojo/johannesthiel.me/issues"
+  },
+  "homepage": "https://github.com/ToxicJojo/johannesthiel.me#readme",
   "devDependencies": {
-    "@gridsome/remark-prismjs": "0.0.5",
-    "@gridsome/source-filesystem": "^0.3.0",
-    "@gridsome/transformer-remark": "^0.2.1",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-vue": "^5.2.2",
-    "gridsome-plugin-pug": "0.0.3",
-    "node-sass": "^4.11.0",
-    "pug": "^2.0.3",
-    "sass-loader": "^7.1.0",
-    "vue-eslint-parser": "^6.0.4"
+    "@11ty/eleventy": "^0.8.3",
+    "@babel/core": "^7.4.5",
+    "browser-sync": "^2.26.5",
+    "del": "^4.1.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-babel": "^8.0.0-beta.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "rollup-stream": "^1.24.1",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
