Added gulp command for convertinv images to webp

--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-clean-css": "^4.2.0",
+    "gulp-ext-replace": "^0.3.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "imagemin-webp": "^5.1.0",
     "rollup-stream": "^1.24.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
